I'll finish this later

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-SSL_Cert = /System/Keys/Certificate.pem
-SSL_Key = /System/Keys/Certificate.key
+SSL_Cert = /Keys/Certificate.pem
+SSL_Key = /Keys/Certificate.key
